--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <nav class="navbar navbar-expand-lg navbar-dark">
                         <a class="navbar-brand" href="index-2.html">
                             <img src="Theme/img/logo-color2.png" alt="">
+                            <h4 ایران موزاییک </h4>
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
